<resources>
    <string name="app_name">AutoAid</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="SQLite">SQLite Demo by Coding Delivery</string>

    <string-array name="Make">
        <item>Make</item>
        <item>Chevrolet</item>
        <item>Dodge</item>
        <item>Ford</item>
    </string-array>
    <string-array name="Model">
        <item>Model</item>
        <item>Malibu</item>
        <item>Challenger</item>
        <item>Fusion</item>
    </string-array>
    <string-array name="Year">
        <item>Year</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="Symptoms">
        <item>None</item>
        <item>Flat Tires</item>
        <item>Car Will Not Start</item>
        <item>Noisy Engine</item>
        <item>Shaky Steering Wheel</item>
    </string-array>

    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="nonmemberPrompt">Not a member, sign up here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="alreadyMember">Already a member? Sign in</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="title_activity_search_issues">SearchIssues</string>
    <string name="title_activity_car_health">CarHealthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_loading_animation">LoadingAnimation</string>
    <string name="car_health">Car Health</string>
    <string name="profile">Profile</string>
    <string name="local_autoshops">Local Autoshops</string>
    <string name="diy_videos">DIY Videos</string>
    <string name="diagonistics">Diagonistics</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="rating">Rating</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="diagnostics">diagnostics</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="tell_us_about_your_vehicle">Tell Us About Your Vehicle!</string>
    <string name="you_drive_a">You Drive a........</string>
    <string name="vehicle">Vehicle</string>
    <string name="Vin">Vin</string>
    <string name="reportsEx1">Date: 12/17/2022 \nTime: 12:46:00\nReported: Squealing noises, uneasy stops\nCar: 2021 Jeep Cherokee</string>
    <string name="reportsEx2">Date: 1/28/2022 \nTime: 5:30:12\nReported: Having trouble steering when turning the vehicle\nCar: 2021 Jeep Cherokee</string>
    <string name="reportsEx3">Date: 10/15/2021 \nTime: 7:10:05\nReported: Car thermostat reporting high temperatures\nCar: 2005 Chevrolet Tahoe</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
       <b>Project Name:</b> AutoAid\n\n
        <b>Project Description</b>\n
        AutoAid is an Android app that provides mechanical
        assistance for vehicles.Once the user creates an
        account, they can enter their VIN (vehicle identification
        number) and any current troubles they are experiencing with
        their vehicle. AutoAid will then access the CarMD API to
        provide a detailed analysis of the vehicle in relation to
        the reported issues. The user will receive suggestions on
        how to fix the problems, along with a cost analysis. If the
        issues cannot be reasonably identified or resolved by the
        user, they can also search for local auto shops. The app
        also includes a feature that allows the user to set
        reminders for routine maintenance, such as oil changes
        and tire rotations. This helps the user stay on top of
        vehicle maintenance and avoid costly repairs down the road.\n


        AutoAid is a simple and intuitive resource for those with
        limited knowledge of vehicle mechanics and troubleshooting,
        helping them fix their car at home and avoid being
        overcharged by mechanics. Whether you are inexperienced or
        an expert, AutoAid gives drivers the confidence to
        make informed decisions when it comes to vehicle repair.\n


        <b>Team Name:</b>
        Team AFK\n
        <b>Team Members -(contact info):</b>
        Keiser Dallas- (keiserdallas@yahoo.com)
        Daniel Davis- (danielwinston669485@gmail.com)
        Amiyah Frierson-(amiyahfrierson@outlook.com)
        Frankie Lavall- (frankielavall15@gmail.com)
        Dylan Weaver- (weaverd9028@gmail.com)\n
        <b>Project Sponsor:</b>
        Dr. Miguel Gates\n

    </string>
    <string name="action_settings">Settings</string>

</resources>
