<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="338dp"
            android:layout_height="77dp"
            android:layout_marginTop="38dp"
            android:text="@string/tell_us_about_your_vehicle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="97dp"
            android:layout_height="101dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="76dp"
            android:text="@string/you_drive_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="You Drive a......." />

        <Button
            android:id="@+id/button2"
            android:layout_width="196dp"
            android:layout_height="75dp"
            android:layout_marginStart="156dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="48dp"
            android:text="Continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/blankcar"
            android:contentDescription="@string/vehicle" />

        <EditText
            android:id="@+id/Vintxt"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="44dp"
            android:autofillHints="Ford"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Vin"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>